# vllm-studio

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .releaserc.json  2026-01-18-usage-page-wrap-up-ai-sdk-v5-migration.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  GLM47_SETUP.md  MIGRATION.md  README.md  STATUS.md  deptry.toml  docker-compose.stack.yml  docker-compose.yml  flaws.md  index.html  install-services.sh  main.js  note.md  package-lock.json  package.json  pyproject.toml  release.config.cjs  scope.md  setup.sh  start-openwebui.sh  start.sh
.factory/: security-config.json  threat-model.md
.github/: FUNDING.yml
.ralph/: COMPLETED.md  COMPLETION_SUMMARY.md  context-log.md  failures.md  guardrails.md  progress.md  state.md
cli/: README.md
config/: controller.example.json  litellm.yaml  mcp_servers.example.json  prometheus.yml  think_parser.py
controller/: README.md  app.py  package.json
controller-new/: .env.example  README.md  package.json
data/: chats.db
docker/: controller.Dockerfile  proxy.Dockerfile
docs/: README.md  RECIPE_SYSTEM.md  SCOPE_OF_WORK.md  chat-scope-of-work.md  chat.md  cloudflare.md  controller.md  daytona-pi-mono-migration-test-plan.md  desktop-electron.md  engine-refactor-plan.md  environment.md  home-mission.md  image-generation.md  index.html  llamacpp-rpc.md  models-recommendations.md  operations.md  orchestration.md  rearchitecture-plan.md  rocm-mi300x-playbook.md  runbook.md  simplification-loop.md  sitegeist-relay-protocol.md  ux-test-checklist.md  versioning.md  voice.md
examples/: README.md
iOS/: PLAN.md
(+1365 files in other folders)
