[project]
name = "vllmstudio"
version = "0.1.0"
description = "vLLM/SGLang Model Management Studio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vllmstudio = "vllmstudio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
